# ac215_HistoriCam

./: .gitignore  GCS_SETUP.md  README.md
.claude/: settings.local.json
.github/workflows/: flutter_ci.yml  flutter_docs.yml  flutter_docs_and_coverage.yml  flutter_lint.yml  flutter_test.yml  test_coverage_report.yml
api-service/: Dockerfile  README.md  docker-compose.yml  docker-shell.sh  pyproject.toml
api-service/src/: main.py
apps/mobile/: API_INTEGRATION.md  README.md  format.bat  format.sh  pubspec.yaml
data/: building_descriptions.csv  buildings_info.csv  buildings_names.csv  buildings_names_metadata.csv  wikipedia_buildings_baseline.csv
data-collection/: pyproject.toml  scrape_wikipedia_buildings.py
data-collection/scraped_data/: wikipedia_buildings_baseline.csv
data-preprocessing/: Dockerfile  README.md  docker-shell.sh  pyproject.toml
deployment/: Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  docker-entrypoint.sh  docker-shell.sh
design/: mockup.md
frontend/: README.md  docker-shell.sh
lib/gcs_utils/: __init__.py  manager.py  pyproject.toml
llm-rag/: docker-shell.sh
model-training/: Dockerfile  README.md  docker-shell.sh  pyproject.toml
secrets/: llm-service-account.json
services/api/: Dockerfile  README.md  docker-shell.sh  pyproject.toml
services/api/src/: main.py  vision_service.py
services/scraper/: DOCKER_USAGE.md  Dockerfile  MULTI_SOURCE_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  docker-shell.sh  pyproject.toml  upload_all_data.sh
services/scraper/src/: cli.py  info_scrape.py  run.py
services/scraper/src/image_scraper/: scrape_all_sources.py  scrape_flickr.py  scrape_images.py  scrape_mapillary.py  scrape_places.py
services/scraper/src/info_scraper/: scrape_building_name.py
services/scraper/src/manual/: create_notebook.py  data.ipynb
services/scraper/src/scraper/: deduplication.py  gcs_manager.py  scrape_all_sources.py  scrape_building_name.py  scrape_flickr.py  scrape_images.py  scrape_mapillary.py  scrape_metadata.py  scrape_places.py  scrape_wikipedia_buildings.py  validation.py
services/vision/: .env.example  Dockerfile  README.md  deploy-cloud-run.sh  docker-shell.sh  download_test_images.sh  pyproject.toml  test_api.py
services/vision/src/: __init__.py  image_utils.py  main.py  vision_service.py
vision/: Dockerfile  IMPLEMENTATION_PLAN.md  README.md  TRAIN_TEST_SPLIT.md  docker-shell.sh  embeddings.jsonl  pyproject.toml
vision-setup/: docker-shell.sh  pyproject.toml
vision/src/: __init__.py  config.py  query.py
vision/src/embeddings/: base.py  generate.py  multimodal.py
vision/src/evaluation/: __init__.py  evaluate.py
vision/src/indexing/: __init__.py  deploy.py
vision/test_data/: generate_test_split.py  test_images.txt
(+960 files in other folders)
