[project]
name = "historicam-api"
version = "0.1.0"
description = "FastAPI backend service for HistoriCam"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.25.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]
