[project]
name = "gcs_utils"
version = "0.1.0"
description = "Shared GCS utilities for HistoriCam"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=2.18.2",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
