[project]
name = "historicam-api"
version = "0.1.0"
description = "HistoriCam building identification API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "google-cloud-storage>=2.18.2",
    "vertexai>=1.43.0",
    "pillow>=11.0.0",
    "numpy>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
